--- a/src/components/introduction-component/user-intro-component.scss
+++ b/src/components/introduction-component/user-intro-component.scss
@@ -11,7 +11,21 @@
     max-width: 45rem;
 
     &--name {
-      font-size: $ft3rem;
+      h1 {
+        font-size: $ft3rem;
+      }
+      input {
+        display: none;
+        width: 360px;
+        height: 50px;
+        border: none;
+        border-bottom: 1px solid white;
+        outline: none;
+        background-color: transparent;
+        margin-bottom: 10px;
+        font-size: $ft2rem;
+        color: inherit;
+      }
     }
     &--designation {
       font-size: $ft1_5rem;
@@ -25,16 +39,39 @@
 
   &__user-profile {
     position: relative;
-    flex-grow: 0.8;
+    width: 200px;
+    height: 200px;
     margin: 0 auto;
     border-radius: 100%;
     border: 0.5rem solid $user-image-border;
     background: $user-text;
     overflow: hidden;
+    @include defaultFlex();
 
     img {
-      position: absolute;
       width: 100%;
+      margin-top: 30px;
+    }
+
+    .image-overlay {
+      input {
+        position: absolute;
+        width: 100%;
+        opacity: 0;
+        cursor: pointer;
+      }
+    }
+    &:hover .image-overlay {
+      cursor: pointer;
+      width: 100%;
+      height: 100%;
+      background-color: #0000005e;
+      position: absolute;
+      @include defaultFlex();
+      img {
+        width: 80px;
+        margin: 0;
+      }
     }
   }
 }
