--- a/src/components/color-change-component/ColorChange.scss
+++ b/src/components/color-change-component/ColorChange.scss
@@ -1,4 +1,8 @@
 .color-container {
+
+  &::-webkit-scrollbar {
+    display: none; // Hide scroll bar but still scroll
+  }
   position: absolute;
   top: 50%;
   left: 10%;
